Update VOCUS 2022-05-21 patch

--- a/_posts/2022-05-03-VOCUS-philotimo-與-愛自-愛衷-負任責-豐功的樣模-榮耀-炫耀-驕傲-風膨-愛動運者-完不滿-愛美-愛兼非攻-等橋接.html
+++ b/_posts/2022-05-03-VOCUS-philotimo-與-愛自-愛衷-負任責-豐功的樣模-榮耀-炫耀-驕傲-風膨-愛動運者-完不滿-愛美-愛兼非攻-等橋接.html
@@ -29,11 +29,10 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">philotimo = philo.timo = 愛.對imo = 愛.imoimo = 愛.丷彐偶一盟oct = 愛.丷彐II一盟八 = 愛.丷彐丨丨一盟㇀丶= 愛.兼 = 愛兼</span>，意通漢字文化先秦時期的思想家墨子或墨家提及的「兼愛」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">philotimo = phi.lotimo = 非.丨和two.i雙dot = 非.丨和二ii點 = 非.工乂一㇀ = 非.工乂𠂉 = 非.工攵 = 非.攻 = 非攻</span>，意通漢字文化先秦時期的思想家墨子或墨家提及的「非攻」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">philotimo = 愛兼 + 非攻 = 愛兼非攻</span>，意通漢字文化先秦時期的思想家墨子或墨家提及的「兼愛非攻」。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">philotimo 這個現在已經極爲罕用的古語，就像 English 的 fuck 或漢字的「惡」一樣，可能變得有點渾言化，其含概的意義也是一言難盡與耐人尋味 <span style="font-weight: bold; ">(註：參考 P.S.1、P.S.2)</span>。不過，philotimo 可能含概的「愛兼非攻」之意，卻保存了古漢字文化先秦時期知名的一位工程家及思想家「墨子」所暢導的思想「兼愛非攻」，也就是類似「大愛和平」的思想。</div>
 <div class="draft-block draft--p left">巧合的是，philotimo 這個單字的字尾 mo 竟然很接近漢語「墨」，timo 又音近墨家的靈魂人物「墨翟」的倒裝「翟墨」呢！</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S.1. 參考〈多重含意的 fuck〉-- </span><a href="https://vocus.cc/BridgeWords/5d548ad1fd897800012b6d25" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/BridgeWords/5d548ad1fd897800012b6d25</span></a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">P.S.2. 參考〈《荀子》之「惡」的內涵〉-- </span><a href="https://vocus.cc/BridgeWords/5d4f63abfd89780001062328" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://vocus.cc/BridgeWords/5d4f63abfd89780001062328</span></a></div>
-<iframe src="https://youtube.com/embed/embed/wJaycp8eX-g" width="640px" height="360px"></iframe>
-<div class="draft-block draft--p center"><a href="https://youtube.com/embed/wJaycp8eX-g" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtube.com/embed/wJaycp8eX-g</span></a></div>
+<iframe allowfullscreen src="https://www.youtube.com/embed/wJaycp8eX-g"></iframe>
+<div class="draft-block draft--p center"><a href="https://youtu.be/wJaycp8eX-g" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/wJaycp8eX-g</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附圖：Philotimo - A Word without Borders / 分享自 YouTube】</span></div>
