--- a/_posts/2022-05-03-VOCUS-搞錯就差很多-you-put-me-to-shame-是你很丟臉.html
+++ b/_posts/2022-05-03-VOCUS-搞錯就差很多-you-put-me-to-shame-是你很丟臉.html
@@ -15,7 +15,7 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <div class="draft-block draft--p left">黎安·萊姆絲的歌曲《Life Goes On》中有一段詞寫道：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">Shame on you, if you fool(愚弄) me once(一次). <br>Shame on me if you fool me twice(兩次)</div></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">騙到我一次，是你丟臉。騙到我兩次，只怪我自己丟臉</div></div>
-<iframe src="https://youtube.com/embed/embed/XvH2SwmP5vw" width="640px" height="360px"></iframe>
+<iframe allowfullscreen src="https://www.youtube.com/embed/XvH2SwmP5vw"></iframe>
 <h2 class="draft-block draft--h2" name="header-22v36">You put me to shame.  [ju pʊt mi tu ʃeɪm]</h2>
 <div class="draft-block draft--p left">遇到這句英文，可別被前面那句英文影響了。如果你照字面去直譯成中文，會變成你把我放到(put me to)丟人現眼(shame)之處，你讓我很丟臉，但中文這句話是有兩種完全相反的解讀。其一是「你好丟人現眼，讓我覺得好沒面子也很丟臉」；其二是「你太好了、太優了、太強了，讓我覺得好慚愧，丟臉的是我」。一個是強調「你」丟臉，一個是強調「我」丟臉。中文很奇妙吧，在不同的使用場合下，同一句中文可以有兩種完全相反的意義。</div>
 <blockquote class="draft-block draft--blockquote">你跟我吃飯不要一邊挖鼻孔啦，讓我很丟臉欸！你丟臉別牽扯到我。</blockquote>
@@ -24,7 +24,7 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <div class="draft-block draft--p left">這裡就有一個例子。網路上有一段某爸爸拍攝的影片，他帶兩個孩子去沃爾瑪玩夾娃娃機(claw machine，爪子機)，卻發掘出孩子的潛能。爸爸說出生了34年至今玩娃娃機都沒有夾到過獎品，沒想到其中一個孩子第一次夾就夾到娃娃，另一個孩子也成功夾到一隻小乳牛。爸爸對孩子說「你們要不要也幫我夾出一個娃娃？」，孩子還真的幫他夾出一隻貓熊。全程花費兩美元夾出三隻娃娃，爸爸在影片的說明欄位寫下：</div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">My kids(小孩) put me to shame.</div></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">我孩子(很強)讓我覺得慚愧啊。</div></div>
-<iframe src="https://www.youtube.com/embed/LpFwpNoChV0" width="640px" height="360px"></iframe>
+<iframe allowfullscreen src="https://www.youtube.com/embed/LpFwpNoChV0"></iframe>
 <div class="draft-block draft--p left">所以你懂了吧，You put me to shame這句話，丟臉的人是「我」，不是「你」。它有兩個使用特性：</div>
 <ol>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">對方比自己更強、更好、更優、更厲害、等級更高。</span></li>
