--- a/_posts/2022-05-03-VOCUS-正港高雄人的歷史小說-陳柔縉-大港的女兒.html
+++ b/_posts/2022-05-03-VOCUS-正港高雄人的歷史小說-陳柔縉-大港的女兒.html
@@ -29,9 +29,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​我覺得她的每一本書，都在傳達這個訊息給大家，讓歷史回歸到「人」的本質，如她曾寫過的一本書的書名：人人身上都是一個時代。​</div>
 <div class="draft-block draft--p left">​總之，《大港的女兒》對於想細心品味高雄歷史的人，會是收穫相當豐富的小說，推薦給大家～​</div>
 <div class="draft-block draft--p left">想知道更多關於小說的內容介紹，歡迎看我最新上線的影片「正港高雄人會有共鳴的歷史小說——陳柔縉《大港的女兒》」：</div>
-<iframe src="https://youtube.com/embed/embed/cvzouwdkjeg" width="640px" height="360px"></iframe>
+<iframe allowfullscreen src="https://www.youtube.com/embed/cvzouwdkjeg"></iframe>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">我是臺灣歷史主題的小說創作者，喜愛分享歷史、文學小知識給大家！</div>
 <div class="draft-block draft--p left">歡迎訂閱我的 <a href="https://www.youtube.com/channel/UCG-GytKfJ_VJHdrzVCs32Yg" target="_blank" class="draft--a">Youtube 頻道「熬夜的便當」</a>以及 <a href="https://www.instagram.com/pan.yutang/" target="_blank" class="draft--a">IG pan.yutang</a> 得到更多新的歷史小故事喔！</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
