--- a/_posts/2022-05-16-VOCUS-逃跑的人-逃走是為了生活.html
+++ b/_posts/2022-05-16-VOCUS-逃跑的人-逃走是為了生活.html
@@ -39,4 +39,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/efe20325-8c16-49c3-be5b-55700912c97f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">在電影裡不時回答過去我們在新聞上的疑問：那些移工為什麼寧願冒著會被遣返，或違反法律的風險也要逃跑？而紀錄片裡呈現了：逃跑是為了能賺更多的錢，為了不負債累累就被返回家鄉，甚至因為勞動環境血汗到無法負荷，所以才必須逃。</div>
 <div class="draft-block draft--p left">在台灣我們也常常因為各種原因離職轉換跑道，也有所謂的經驗越多跳槽另間公司賺取更多錢，那為何不去。我想移工礙於法規無法想走就走，勞工為何想離職許多時候問題還是出在公司制度上。想想老闆給什麼薪資要人做甚麼事，或是待人處事的態度。真有說得那麼好，為何總有人逃？</div>
-<iframe src="https://www.youtube.com/embed/BM5zyLw_ZS4" width="720px" height="360px"></iframe>
+<iframe allowfullscreen src="https://www.youtube.com/embed/BM5zyLw_ZS4"></iframe>
