--- a/_posts/2022-05-17-VOCUS-惡人之煞-上帝會原諒我的.html
+++ b/_posts/2022-05-17-VOCUS-惡人之煞-上帝會原諒我的.html
@@ -39,4 +39,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/8eee2e21-878d-48e2-90ff-04e8fd8b7ca9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">在電影中有些觀眾覺得青年很有可能在實際的軍旅生涯中加油添醋了一些虛構的故事，來碰風自己的形象將自己塑造成一個壞男人浪子回頭的形象，導演其實也考慮過這點，但這樣宣揚自己的壞，和青年在勒戒所良好形象的落差，也正說明著青年不一樣的生命樣貌。</div>
 <div class="draft-block draft--p left">不管青年是在說謊還是實際殺人兇手，我認為這反而可以讓我在這部片反思緬甸地方的處境，必須要把自己塑造成十惡不赦之人才得以保護自身，在這裡「惡」變成一個武裝自己、功績顯耀、和讓青年找到自己認同感的存在。不斷凸顯自己的邪惡向善才有意義。這種「惡人養成」到底是在緬甸身不由己，還是淺移默化激發青年心中向惡的面容？</div>
-<div class="embed-block-prerender"><iframe allowfullscreen src="https://www.youtube.com/embed/ir48yflb6MY"></div>
+<div class="embed-block-prerender"><iframe allowfullscreen src="https://www.youtube.com/embed/ir48yflb6MY"></iframe></div>
