--- a/_posts/2022-05-19-VOCUS-有沒有-商品價格一樣但內容縮水-的八卦-英文把這叫做-shrinkflation.html
+++ b/_posts/2022-05-19-VOCUS-有沒有-商品價格一樣但內容縮水-的八卦-英文把這叫做-shrinkflation.html
@@ -23,7 +23,7 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <div class="draft-block draft--p left">所以shrinkflation是以inflation為基底字，然後把in去掉，在前面接上shrink。為什麼要這樣接？因為這樣才好發音。你仔細看，shr<span style="text-decoration: underline; ">in</span>k和<span style="text-decoration: underline; ">in</span>flation都有共通的i和n這兩個字母，你把這兩個單字上下疊在一起看，就知道為何英文要這樣造字了。</div>
 <pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block">shr<span style="text-decoration: underline; ">in</span><span style="font-weight: bold; ">k</span></pre><pre class="draft--code-block">　　+</pre><pre class="draft--code-block">   <span style="text-decoration: underline; ">in</span><span style="font-weight: bold; ">f</span>lation</pre><pre class="draft--code-block">= shr<span style="text-decoration: underline; ">in</span><span style="font-weight: bold; ">kf</span>lation</pre></pre>
 <div class="draft-block draft--p left">換句話說，既然這兩個單字都要唸in的發音，乾脆就合在一起唸，再把k和f以及後面的lation依序唸出來就好。這就是英文創字的其中一套規則。</div>
-<iframe allowfullscreen src="https://youtube.com/embed/8WWNsUWN1ss"></iframe>
+<iframe allowfullscreen src="https://www.youtube.com/embed/8WWNsUWN1ss"></iframe>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">shrinkflation到底是什麼概念？</span></li>
 </ul>
@@ -31,7 +31,6 @@ author: 你的英日語自學導師　 ོꦿ༄譯꧁難忘꧂
 <div class="draft-block draft--p left">我今天在《艾倫秀》看到主持人艾倫用一句很淺顯易懂的話完美解釋了shrinkflation的意思。</div>
 <blockquote class="draft-block draft--blockquote">Because(因為) of inflation, prices(價格) are going up, but then(然後) companies(公司) want(想要) to keep(保持) their products(產品) at(處於...位置點) the same(同樣的) price, so they are giving(給) you less(更少).</blockquote>
 <blockquote class="draft-block draft--blockquote">價格因為通膨而上漲，企業為了想讓產品維持在同樣不變的價位，因此提供的內容物變得更少了。</blockquote>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">艾倫還舉幾個了美國真實發生的例子。多力多滋餅乾的價格不變，但每一份包裝都少了5片餅乾。衛生紙價格沒漲，但每卷從264抽變成244抽。冰淇淋的包裝也變小了。旅館給你的浴巾數量變少，且改成提供大瓶的洗髮精但是要與他人共用。某家廠商的家庭包餅乾也從487公克縮水成413公克(下圖)。</div>
 <div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b567307a-d91f-4270-a5ed-e19a0fc20e84.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖取自艾倫秀</figcaption></div>
 <div class="draft-block draft--p left">可見現在美國人的皮帶也要勒很緊啊～</div>
