--- a/_posts/2022-05-19-VOCUS-灣生看台灣歷史-早逝的叛逆女學生-大正篇.html
+++ b/_posts/2022-05-19-VOCUS-灣生看台灣歷史-早逝的叛逆女學生-大正篇.html
@@ -39,7 +39,7 @@ author: 熬夜的便當（Ben &#38; Don）｜班與唐
 <div class="draft-block draft--p left">​這樣的一名叛逆女子，享年二十三歲而已。​</div>
 <div class="draft-block draft--p left">​不過山口小靜播下的世界語種子，確實在臺灣萌芽，影響了當時的臺灣知識青年。​</div>
 <div class="draft-block draft--p left">​其他關於大正時期臺灣的更多介紹，歡迎看我 YouTube 頻道「熬夜的便當」最新影片喔！​</div>
-<div class="embed-block-prerender"><iframe allowfullscreen src="https://youtube.com/embed/AkKQivjJO-k"></div>
+<div class="embed-block-prerender"><iframe allowfullscreen src="https://www.youtube.com/embed/AkKQivjJO-k"></iframe></div>
 <div class="draft-block draft--p left">同場加映小說《亮光的起點》，裡面以台籍博物學家王雨卿為出發點，提及臺灣世界語運動的歷史背景喔。​</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">參考資料：​<br>竹中信子，《日本女人在台灣 — — 日治台灣生活史》（大正篇）​<br>班與唐，《亮光的起點》 — — 在「世界語」呼喊愛情（原文刊載在《幼獅文藝》2021 年 7 月號）<br>山川菊榮，《懷念山口小靜》</div>
