--- a/_posts/2022-05-20-VOCUS-香港之子-周潤發.html
+++ b/_posts/2022-05-20-VOCUS-香港之子-周潤發.html
@@ -15,8 +15,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">西元1973年，一次偶然機緣下，身旁好友在報刊上看到了邵氏電影無線電視演員訓練班正進行招募新血的動作，他們認為勤奮向上的發哥，<span style="font-weight: bold; ">「或許」，或許真的只是賭上一個渺小的機會，</span>能透過演藝事業翻身，於是鼓勵他不妨一試…</div>
 <div class="draft-block draft--p left">毫無戲劇演出的經驗下，發哥幸運地獲得電視台前輩鍾景輝（King Sir）的賞識，以一紙薄薄合約，正式踏上星河之途。三年後，西元1976年，已在連續劇裡擔任多次配角工作的發哥，在大螢幕裡首次亮相……《投胎人》。</div>
 <div class="draft-block draft--p left">西元1980年，絕對不能不提的1980，發哥在電視台的推薦下，<span style="font-weight: bold; ">取代了因拍戲操勞過度而病倒的「秋官」鄭少秋</span>，首挑大樑，飾演時代電視劇《上海灘》（The Bund I）裡的男主角「許文強」！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/4tNg5N6hi1k"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/4tNg5N6hi1k"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">從「愛你、恨你」到「浪奔、浪流」，葉麗儀的歌聲，黃霑的填詞，顧嘉煇的譜曲，「似大江一發不收」，發哥完壁詮釋了大上海殘酷舞台中，五四（五四運動）男兒的輕狂與正義</span>，還有動盪時代的江湖血淚！和兄弟丁力間的恩仇一場、程程的無緣終身，加上與幫派老大馮敬堯（從岳父變死敵）的愛恨矛盾，發哥的演技，舉手投足，著實引起香江電視圈的空前轟動！全劇25集，萬人空巷所帶來的收視紅盤，讓周潤發首度嘗到了身為影視明星、電視天王的風采。家喻戶曉的<span style="font-weight: bold; ">許文強，三個字，似乎也悄悄帶走了發哥往日慘澹少年時的貧困。</span></div>
 <div class="draft-block draft--p left">雖然說，後續選擇將拍戲重心轉往大螢幕的發哥，起初的票房表現並未如電視劇時期般出色，加入許鞍華名導的《胡越的故事》團隊，電影叫好卻不叫座，不到400萬港幣的回收，甚至被八卦雜誌譏為票房毒藥！</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
@@ -26,9 +25,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/7e33cf6e-9816-4908-8523-073519cddaa3.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">燒掉美金</figcaption></div></div>
 <div class="draft-block draft--p left">老天，嗯，真的眷顧善良人吧，藉由製作團隊的提拔與安排，西元1986年，發哥與導演吳宇森進行懇談後，決定投身新一代黑社會動作電影《英雄本色》（A Better Tomorrow）的演員陣容；當時的吳導，電影事業也陷入低潮，名角狄龍方被迫離開合作多年的邵氏影業！唯一的亮點以及讓金主願意投資的關鍵，可能只剩下張國榮了……但無人得以預料，<span style="font-weight: bold; ">Mark哥（小馬哥）的亮眼表現，不只奠定了發哥在影壇至今無法抹滅的經典地位，全院線突破3,465萬港幣的爆紅佳績，更讓吳宇森等人徹底扭轉了原本外界被看衰的命運！</span></div>
 <blockquote class="draft-block draft--blockquote">「杯中沉浮無了時，小小失敗算什麼。啊～免失志、免失志，機會若到滿滿是。」</blockquote>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/HYP0A-Gk4EY"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/HYP0A-Gk4EY"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">陳小雲的《免失志》，隱約呼應著發哥如海上逐浪的前半生，台北「楓林閣」酒家前所未見的槍戰橋段，肝膽義氣跟遊走黑白間的掙扎，《英雄本色》開創了史無前例的華語動作片新河</span>；</div>
 <div class="draft-block draft--p left">除了坐上<span style="font-weight: bold; ">香港電影金像獎協會最佳華語電影一百部的「亞軍」寶座</span>外，發哥更是從小小的南丫島出發，進而紅遍了整個華人世界，甚至行銷至異常排外的南韓娛樂市場！片商還重新拍攝了《英雄本色》的韓國版《무적자》呢！</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/3fabdfed-56d4-4d66-965a-780a3924135d.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
@@ -36,9 +33,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/9876c0d5-6a20-4370-955a-97072d5518c0.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/bca5a43d-d0e2-490e-8d22-5cab3df2ee27.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">千禧年之後，《臥虎藏龍》（Crouching Tiger, Hidden Dragon）、《神鬼奇航-世界的盡頭》（Pirates of the Caribbean: At World's End）、《滿城盡帶黃金甲》等斥資重金打造的大場面電影，讓發哥的影壇地位再次提升，擠身國際實力派巨星之林！</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Nr6KyDfmWic"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Nr6KyDfmWic"></iframe></div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">李慕白與玉嬌龍，一老一少、理性與感性、生之欲跟愛之慾……這是另一篇觀影心得，寫下來應該也是兩千字吧，哈哈。</span></blockquote>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">作為香港電影一哥，近期與後輩們合演的《讓子彈飛》、《賭國風雲》系列和《寒戰》、《無雙》，即便戲份已不再如當年獨大，多是扮演著穿針引線的配角，但發哥戲裡越見成熟，而且對於觀眾而言，看到發哥招牌笑容的登場，更是有種莫名的信任感和安全感（我自己先舉手！）</div>
@@ -53,9 +48,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">「大師」在哪裡？<span style="font-weight: bold; ">大師在這裡，他的名字叫Mark哥、許文強、李慕白……周潤發。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">彩蛋？</span></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LMsPId5rqEY"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LMsPId5rqEY"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">圖文來源、一併致謝：</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Chow_Yun-fat" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Chow_Yun-fat</a></div>
