--- a/_posts/2022-05-20-PQ-台灣在香港問題上的兩難.html
+++ b/_posts/2022-05-20-PQ-台灣在香港問題上的兩難.html
@@ -12,7 +12,7 @@ author: "《時代革命》阿爸"
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700.jpg" alt="" class="wp-image-102065" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>前香港政務司司長李家超在5月8日如預期當選香港行政長官（特首）<br>圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700.jpg" alt="" class="wp-image-102065" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/013c2266-2000x1333_014544601700-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>前香港政務司司長李家超在5月8日如預期當選香港行政長官（特首）<br>圖／中央社</figcaption></figure></div>
 
 
 
