--- a/_posts/2022-05-20-VOCUS-flute-與-笛-筩-呼笛-吹笛-等的橋接-兼談-chinese-flute-就是-中國笛-嗎.html
+++ b/_posts/2022-05-20-VOCUS-flute-與-笛-筩-呼笛-吹笛-等的橋接-兼談-chinese-flute-就是-中國笛-嗎.html
@@ -26,13 +26,11 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">flute = flu.te = 乎丨凵.笛 = 乎一ㄩ.笛 = 乎口.笛 = 呼.笛 = 呼笛</span>，意通「吹笛」。此時作爲動詞，但也可能意通前述的「胡笛」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">flute = 亻零n笛 = 人〇⺈笛 = 人口⺈笛 = 吹笛</span></div>
 <div class="draft-block draft--p left">由上述的橋接分析可知，flute 一字在作爲樂器的名稱時，可能含概了漢字文化先秦時期的古人所知的各種笛子的稱呼，例如「胡笛」、「羌笛」、「龍笛」、「長笛」、「短笛」、「玉笛」、「笳笛」等。也就是說，雖然當今 flute 一字多指「長笛」，但早期 flute 一字極可能是笛類樂器的總稱；並且，漢字文化早期不論是橫著吹的還是豎著吹的吹管樂器都稱爲「笛」，到了漢代以後纔將豎著吹的笛子改稱為「簫」(華語發音 hsiao 或 xiao)。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-8kenh"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">fluted：flute的；flute已動；flute已做；flute矣動；flute矣做；flute完動；flute完做。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">fluting：flute的；flute於正；flute於將；flute之名動；flute之事；flute之工具；flute之音樂；flute之能技。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">fluter：呼笛人；吹笛人。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">pipe：管；簫；笛；筩；歕管；吹管；歕音筩；歕音管；吹音筩；吹音管。</span>在表達管樂器或吹奏樂器時，English 也常用 pipe ㄧ字，例如「編管」、「排簫」或「排笛」之類也可能稱爲 pipes 或 pan pipes ；但是喇叭類的樂器則多稱 horn (奐；號；角；號角；叭喇；號叭喇；奐叭喇；號奐叭喇)。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-c5fi9"><span style="font-weight: bold; ">後記：Chinese flute 就是「中國笛」嗎？<br></span></h2>
 <div class="draft-block draft--p left">按漢字的脈絡看，照理說此時 Chinese flute 的 Chinese 比較可能是「秦式」或「清式」的意思，因爲「中國」一詞在漢字文化的古典定義中其實是「京師」、「天子位」、「天子都」、「朝廷」之類與「中央聯邦政府」或「聯合國總部」或「天下之盟主」相關的意義，但也有「正國」(或意通「政國」)、「內國」(即「國內」的同義倒裝詞) 等其它的意思。</div>
 <div class="draft-block draft--p left">所以，如果我們去查詢先秦兩漢的一些著名的典籍，就會發現根本找不到「中國笛」這樣的名詞，但是卻能找到「胡笛」、「羌笛」、「龍笛」、「長笛」、「短笛」、「玉笛」、「笳笛」等。道理很簡單，因爲漢字「中國」一詞自古早開始就是一個政治術語，而不是地理和文化方面的說詞。所以，從這些笛子的華語發音來看，也許「羌笛」(發音 chiang dí 或 ㄑㄧㄤㄉㄧˊ) 纔是最早的 Chinese flute。</div>
@@ -42,8 +40,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left">也就是說，漢字史書中的古代羌人 (Ancient Chinese) 可能和古代的姬姓周人 (例如建立周朝的周武王<span style="text-decoration: underline; ">姬發</span>) 的始祖<span style="text-decoration: underline; ">姜嫄</span>、古代的秦氏或秦人 (Chinese) 都有密切的關聯，甚至也和商朝王室建立了姻親的關係 [例如商朝末代帝王商紂王 (帝辛) 的王后就是姜氏]，然後又一直橫跨歷史到後來的契丹人 (Khitan 或 Kathay 等)、金人 (Ambaan 或 Aisin 或 Jin 或 Kim 或 Golden 等)、清人(Chinese) 等。</div>
 <div class="draft-block draft--p left">並且，在更早期的殷商時期，上述的羌人 (Chinese) 又可能是古代中原西方戎人 (Rouran -- 人民、民人，漢譯「柔然」；Russian -- 人士眾之地的人、人民眾之地的人、芮之人，漢譯「俄羅斯人」) 的一個分支，但與後來由 European 之觀點來看的、被認爲也是目前 Russian 的始祖之一的 Norseman (北向之民人、北域來徙之民人，漢文或譯「諾斯人」、「北方人」、「北歐人」等) 及 Norman (北民人、北域來民人，漢文或譯「諾曼人」、「北方人」等) 可能關係不大。</div>
 <div class="draft-block draft--p left">耐人尋味的是，從漢字「筩」又意通漢字「笛」及 flute 來看，或許笛類樂器的發明，最初是從一些被大風吹響的、有破孔的桶子得來的靈感；並且，搞不好早期還可能有像桶子一般巨大的、甚至比當今的 bassoon (低聲筩，漢文或譯「巴松管」、「低音管」等) 大得更多的低音桶型笛，而且是由鼓風裝置或自然風來提供發聲用的氣流呢！<span style="font-weight: bold; ">(有待考古)</span></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/R2HuxiqUuTA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/R2HuxiqUuTA"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/R2HuxiqUuTA" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/R2HuxiqUuTA</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Russ - The Flute Song (Official Video) / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
