--- a/_posts/2022-05-21-PQ-中國趁低價買俄石油-俄週六停芬蘭天然氣.html
+++ b/_posts/2022-05-21-PQ-中國趁低價買俄石油-俄週六停芬蘭天然氣.html
@@ -28,7 +28,7 @@ author: 陸 瑪丁
 
 
 
-<p>在<strong>國際間正積極尋覓替代能源、轉離倚賴俄國能源之際，中國正不客氣的透過各種管道，買下俄國便宜的原油</strong>。由於中<strong>國的煉油商正面臨經濟遲緩、利潤縮減的局勢</strong>，此時買進較低較格的原油，對煉油商而言有著無比的吸引力。而據路透社報導，中國聯合石化（UniPec） 及中國北方工業集團（Norinco）正向俄羅斯進行石油的採購。<br></p>
+<p>在<strong>國際間正積極尋覓替代能源、轉離倚賴俄國能源之際，中國正不客氣的透過各種管道，買下俄國便宜的原油</strong>。由於<strong>中國的煉油商正面臨經濟遲緩、利潤縮減的局勢</strong>，此時買進較低價格的原油，對煉油商而言有著無比的吸引力。而據路透社報導，中國聯合石化（UniPec） 及中國北方工業集團（Norinco）正向俄羅斯進行石油的採購。<br></p>
 
 
 
