Update VOCUS 2022-05-23 patch

--- a/_posts/2022-05-22-VOCUS-柯南-不是名偵探-卻.......html
+++ b/_posts/2022-05-22-VOCUS-柯南-不是名偵探-卻.......html
@@ -46,15 +46,12 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <h2 class="draft-block draft--h2" name="header-1a5bc"><span style="font-weight: bold; ">「千萬別把人變成英雄，華生。所謂的英雄是不存在的，就算有，我（福爾摩斯）也不在其中。」</span></h2>
 <div class="draft-block draft--p left">，柯南沒有寫這一段，這是Sherlock，《新世紀福爾摩斯》的台詞。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/CGhPVGabHQM"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/CGhPVGabHQM"></iframe></div>
 <div class="draft-block draft--p left">福爾摩斯的支持者寫信給柯南和出版社，要求他、拜託他，甚至是「恐嚇」他，<span style="font-weight: bold; ">務必要讓福爾摩斯從另一個故事（宇宙？）裡重生，不然大家絕對不會善罷干休！</span></div>
 <div class="draft-block draft--p left">西元1902年4月，《巴斯克維爾的獵犬 / 夜光怪獸》（The Hound of the Baskervilles）小說連載完畢，是柯南停筆之後的復出之作，但故事發生背景是設定在《最後一案》之前，讀者依然帶著一絲絲的遺憾與期待。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ef738bd3-f2f4-4046-a772-809a46fd1291.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">好不容易，等到了西元1903年，整整十年的空窗期後，在美國主流出版商Collier's的盛情邀約下，已經獲得國王封予爵位稱號的柯南，<span style="font-weight: bold; ">再度完成了《空屋》（The Adventures of the Empty House）一作，在打虎莫浪（Sebastian Moran）的無破綻犯罪下，福爾摩斯出乎意料的現身，雖嚇昏了華生醫師等人，但也重新捍衛倫敦，打擊犯罪，徹底殲滅莫里亞蒂教授遍及歐洲的殘黨餘孽！</span>讓福迷們感動開卷之餘，又能夠再次跟隨福爾摩斯和華生的腳步，進入刺激萬分的偵探推理世界！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/P4h4NsTDExg"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/P4h4NsTDExg"></iframe></div>
 <div class="draft-block draft--p left">直到西元1927年告老停筆為止，柯南一共寫作了56篇短篇和4篇長篇的福爾摩斯探案集，經典之作如<span style="font-weight: bold; ">《恐怖谷》（The Valley of Fear，這本長篇我個人大推啊！）和《最後的致意》（The Last Bow）等，除了大量翻譯成數十國語言版本，也在世界各個角落持續出版著。</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/fd34ccba-48bb-4a43-8330-2fccb135ce48.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">西元1930年7月，柯南因心臟病安詳別世，享壽71歲；</div>
@@ -67,8 +64,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">而小柯南的故事舞台<span style="font-weight: bold; ">「米花町」，和男主角的住所「米花町二丁目21番地」，米花（Beika）其實也正是向「倫敦貝克街221號B室」（221B Baker Street）致意。</span></div>
 <div class="draft-block draft--p left">至於<span style="font-weight: bold; ">江戶川　柯南的生日是5月4日，這一天呢，正是《最後一案》中，福爾摩斯和莫里亞蒂雙雙墜下懸崖的日子。</span></div>
 <div class="draft-block draft--p left">老師啊，最後還是下個主題音樂好了！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/LSKFSNK1pYk"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/LSKFSNK1pYk"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">圖文來源、一併致謝：</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Arthur_Conan_Doyle" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Arthur_Conan_Doyle</a></div>
@@ -77,6 +73,3 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><a href="https://www.themost10.com/interesting-facts-about-sir-arthur-conan-doyle/" target="_blank" class="draft--a">https://www.themost10.com/interesting-facts-about-sir-arthur-conan-doyle/</a></div>
 <div class="draft-block draft--p left"><a href="https://www.thoughtco.com/arthur-conan-doyle-1773666" target="_blank" class="draft--a">https://www.thoughtco.com/arthur-conan-doyle-1773666</a></div>
 <div class="draft-block draft--p left"><a href="https://www.bbc.com/culture/article/20160106-how-sherlock-holmes-changed-the-world" target="_blank" class="draft--a">https://www.bbc.com/culture/article/20160106-how-sherlock-holmes-changed-the-world</a></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
