--- a/_posts/2022-05-22-PQ-一波未平一波又起-猴痘蔓延歐美加澳.html
+++ b/_posts/2022-05-22-PQ-一波未平一波又起-猴痘蔓延歐美加澳.html
@@ -20,7 +20,7 @@ author: 李熱葵
 
 
 
-<div class="wp-block-image"><figure class="alignright size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/194c2b35-猴痘（圖／美國疾管署）.jpg" alt="" class="wp-image-102242" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/194c2b35-猴痘（圖／美國疾管署）.jpg 700w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/194c2b35-猴痘（圖／美國疾管署）-300x197.jpg 300w" sizes="(max-width: 444px) 100vw, 444px" /><figcaption>猴痘（圖／美國疾管署）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="alignright size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/194c2b35-猴痘（圖／美國疾管署）.jpg" alt="" class="wp-image-102242" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/194c2b35-猴痘（圖／美國疾管署）.jpg 700w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/194c2b35-猴痘（圖／美國疾管署）-300x197.jpg 300w" sizes="(max-width: 444px) 100vw, 444px" /><figcaption>猴痘（圖／美國疾管署）</figcaption></figure></div>
 
 
 
