--- a/_posts/2022-05-23-INMEDIA-律師會收國安處涉1宗相關612基金投訴-未透露其他資料.html
+++ b/_posts/2022-05-23-INMEDIA-律師會收國安處涉1宗相關612基金投訴-未透露其他資料.html
@@ -12,6 +12,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/262y31" title="無標題"><img src="https://live.staticflickr.com/65535/52093383725_db1460ae8e_z.jpg" width="640" alt="無標題" /></a></p>
 <p><strong>律師會：該宗投訴可涉多個投訴人</strong></p>
 <p>陳澤銘表示，投訴涉及「香港警方喺5月12日公布嘅嗰單案件」，與《國安法》有關，投訴人亦可以多於一人。在記者追問下，他才確認投訴與612人道支援基金有關。他重申，投訴涉及專業操守調查，在無罪假定原則下會保密，因此拒絕透露任何詳情，包括被投訴的律師與律師行資料、總數以及涉及違法專業守則的行為。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7scb0y" title="無標題"><img src="https://live.staticflickr.com/65535/52092898988_a890735c69_z.jpg" width="640" alt="無標題" /></a></p>
 <p><strong>裁定投訴成立前 涉事律師能繼續執業</strong></p>
-<p>在無罪推定的原則下，在被律師紀律審裁組裁定投訴成立前，被投訴的律師可以繼續執業，其處理的案件亦暫時不會受影響。律師會表示，未能預計調查實際要多久，但指調查需時，重申律師會將在適當時候，公布更多資料。</p>
+<p>在被律師紀律審裁組裁定投訴成立前，被投訴的律師可以繼續執業，其處理的案件亦暫時不會受影響。律師會表示，未能預計調查實際要多久，但指調查需時，重申律師會將在適當時候，公布更多資料。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
