Update VOCUS 2022-05-24 patch

--- a/_posts/2022-05-23-VOCUS-再會啦-白宮-雲林的人體實驗.html
+++ b/_posts/2022-05-23-VOCUS-再會啦-白宮-雲林的人體實驗.html
@@ -28,7 +28,7 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">這個紀錄片其實是一樁意外，而也是這次意外無意間開啟一段中華民國與美之間合作的歷史記憶。雲林水林鄉的白色建築其實是美援之下的一段在台實驗計畫，根據紀錄片中導演李建成赴美追查的資料，應該是西元1967年時駐軍台北的美國海軍第二醫學研究所在雲林水林鄉蓋起的建築物，主要用於人體實驗。</div>
 <div class="draft-block draft--p left">一般說起人體實驗往往會有像是日本731部隊的殘酷負面的想像，但是實際上人體實驗是醫學研究重要的部分，例如新冠病毒的疫苗最終是否有效，還是需要願意接受的志願者自願參加臨床試驗，才能獲得數據。可以說許多合法正當的人體實驗是需要評估當事者的健康還有意願。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/f0b6a706-0cf2-4de5-9805-007e75bd51ee.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/9luJQi60oGU"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/9luJQi60oGU"></iframe></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b447ad22-c67a-4a5e-b9c7-50d3b8fce343.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">雲林水林鄉的白宮其實是美國在台實行的一項營養研究計畫，該計畫由已故的周田博士主持，現在以知是對孕婦以及嬰兒的食用營養品影響的相關研究，但詳細的檔案資料部分都被存放在美國約翰霍普金斯大學，並且美國軍方對此無回應，可以說這個實驗的實際目的依舊是個謎。</div>
 <div class="draft-block draft--p left">但經過導演的努力雖然無法得到更多進一步實驗的資料，但卻找到了很多當時年輕時候在裡頭工作的女性工作人員，還有他父親的同事，每個人敘述當時在這座實驗室裡工作的崗位和內容還有待遇。對於研究目的雖一無所知，但卻意外的勾起互相年輕時在這白宮的種種回憶。</div>
@@ -42,4 +42,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/401dbb4a-6146-4026-a070-cb25f7bd35d8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">可惜的地方當然是這部紀錄片如果以實驗室白宮為主軸的話，繼續深挖也許能道出更多當時美國在台的實驗計畫背後的意義，並且還援這段美國在台軍援的另外一個面向。但如果是著重在水林鄉和白宮工作人員的情感方面的話《再會啦 白宮》可能從一開始就是導演試圖透過這神秘的機構還原父親那段深刻的記憶。</div>
 <div class="draft-block draft--p left">當年接受實驗的孩子和孕婦都還活得好好的，也沒跟其他人有什麼不一樣，故這個實驗的意義究竟是什麼？真的是電影留下最大的謎團。但對於裡面的叔叔阿姨來說，實驗的數據和意義不重要，因為這部電影多年後同樣的人能夠再相會的情感也許遠大過那永遠不知道的美國實驗報告。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/qowcke2Pd1I"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/qowcke2Pd1I"></iframe></div>
