--- a/_posts/2022-05-23-PQ-朱立倫稱張善政讓民進黨陣腳大亂-王定宇-國民黨才陣腳大亂.html
+++ b/_posts/2022-05-23-PQ-朱立倫稱張善政讓民進黨陣腳大亂-王定宇-國民黨才陣腳大亂.html
@@ -24,7 +24,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。.jpg" alt="" class="wp-image-101770" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。-300x205.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。-768x524.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>國民黨徵召張善政參選桃園市長。圖／中央社。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。.jpg" alt="" class="wp-image-101770" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。-300x205.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/9fc2c234-國民黨徵召張善政參選桃園市長。圖／中央社。-768x524.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>國民黨徵召張善政參選桃園市長。圖／中央社。</figcaption></figure></div>
 
 
 
