--- a/_posts/2022-05-24-INMEDIA-警拘一男涉於家中自製炸藥-兩同住家人同被捕.html
+++ b/_posts/2022-05-24-INMEDIA-警拘一男涉於家中自製炸藥-兩同住家人同被捕.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p>警方之後鎖定一名31歲男子，並於昨日在黃大仙公屋單位進行拘捕行動。在調查期間，警方發現屋內其中一間房間有大批懷疑製作爆炸品的工具及原材料，包括量杯、大量電線裝置、電路板、計時裝置、自製的加熱裝置及增強壓力裝置，形容現場為「小型化學實驗室」。警方檢獲約20公斤化學原材料，包括氯酸鉀、硫酸鈉、硝酸鈣、鉻酸鉛及類似鏹水及通渠水的化合物。其兩名同住家人亦被捕，將被調查是否涉及刑事成分。</p>
 <p>有組織罪案及三合會調查科警司陳滙能表示，該名31歲男子亦在新蒲崗租用一個迷你倉，並搜出10至15公斤不同種類的化合物，有機會用作炸藥用途。他指男子報稱為電腦技工，強調沒有需要藏有大量不同種類的化學品。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/3j1gF1" title="無標題"><img src="https://live.staticflickr.com/65535/52094625047_018cb41645_z.jpg" width="640" alt="無標題" /></a><br /><em>有組織罪案及三合會調查科警司陳滙能</em></p>
-<p><strong>被捕男子曾稱「警察死清光」、「搵法官算帳」</strong></p>
-<p>對於該男子發佈的言論內容，譚威信則指男子於今年1月及4月曾在公開群組曾表示希望「警察死清光」及攻擊警察總部，以及於去年7月及8月曾在群組留言，詢問某特定法官的地址指要「搵法官算帳」，另於社交通訊平台亦曾稱正自行研發爆炸品。</p>
+<p><strong>被捕男子曾稱「警察死清光」、「找法官算帳」</strong></p>
+<p>對於該男子發佈的言論內容，譚威信則指男子於今年1月及4月曾在公開群組曾表示希望「警察死清光」及攻擊警察總部，以及於去年7月及8月曾在群組留言，詢問某特定法官的地址指要「找法官算帳」，另於社交通訊平台亦曾稱正自行研發爆炸品。</p>
 <p>被問及爆炸品是否計劃於七一使用，陳滙能指暫時未見到有關聯將於哪個特定日子使用，現階段仍需於詳細化學分析驗證爆炸品是否已完成，抑或仍於製作階段。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
