Update VOCUS 2022-05-25 patch

--- a/_posts/2022-05-24-VOCUS-鹿王-怪疫下的國家分裂.html
+++ b/_posts/2022-05-24-VOCUS-鹿王-怪疫下的國家分裂.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/4196b6c2-f58b-4b3e-92a2-d6a002342a3a.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">除了開頭之外需要稍微調適，我認為在改編成一般觀眾也會懂小說世界觀這點，《鹿王》監督安藤雅司與導演宮地昌幸做了不少努力，但真正的醫療與政治大亂鬥的第三部《鹿王－水底之橋》篇章沒有辦法收入的確是可惜。因為那才是關於政治人心與醫療歷史之間矛盾情感的主軸篇章。</div>
 <div class="draft-block draft--p left">整體來說我認為動畫《鹿神》比較像是一部小說濃縮版與推坑的動畫作，也是一部讓這時代動畫迷沒機會接觸到《精靈守護者》和《獸之奏者》的人，重新認識上橋菜穗子這位作者所創作人與動物奇幻世界的入門作，可以看見與當代輕小說奇幻不大相同的敘述風格。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/XJEdycdOfZ0"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/YP_dnbUC9kg"></iframe></div>
