--- a/_posts/2022-05-24-INMEDIA-確診250宗-歐家榮-疫情趨勢向下.html
+++ b/_posts/2022-05-24-INMEDIA-確診250宗-歐家榮-疫情趨勢向下.html
@@ -16,8 +16,7 @@ author: 獨媒報導
 <p>另外2宗在第8日的樣本呈陽性，疑為復陽個案，他們均在前往深圳灣時檢測結果呈陽性。一名25歲男子在5月16日從英國到港，23日完成酒店檢疫後同日欲前往內地，在深圳灣口岸的檢測結果呈陽性。他曾接種兩劑疫苗，沒有病徵，Ct 值為38，翌曰再採樣已為陰性。</p>
 <p>一名44歲男子，則在5月15日由馬來西亞到港，22日完成酒店檢疫後同日前往內地，在口岸檢測結果為不確定，其後送到衞生署化驗所，Ct 值高於30，23日的採樣結果已為陰性。他已接種三劑疫苗，沒有病徵。</p>
 <p>一名53歲女子，在第10日社區檢測結果呈陽性，她在5月13日由英國到港，20日完成酒店檢疫，其第8、9日的結果均為陰性，至22日的結果則為陽性，Ct 值為37。她已接種三劑疫苗，沒有病徵，當局將作基因分析，調查是否復陽。</p>
-<p>一名本地貨機機師從印度返港後確診，該名36歲男子曾經駕駛貨機在5月19日及21日往返印度與香港，在印度當地採取閉環式管理，衞生防護中心懷疑為本地個案。</p>
-<p>該名機師居住在大埔，已接種三劑疫苗，在5月23日的快測結果呈陽性，24日出現病徵，當局將就其個案作基因分析。</p>
+<p>一名本地貨機機師從印度返港後確診，該名36歲男子曾經駕駛貨機在5月19日及21日往返印度與香港，在印度當地採取閉環式管理，衞生防護中心懷疑為本地個案。該名機師居住在大埔，已接種三劑疫苗，在5月23日的快測結果呈陽性，24日出現病徵，當局將就其個案作基因分析。</p>
 <p>防護中心就95宗個案中作病毒基因分析，92宗對L452R病毒呈陰性，即疑含Omicron 病毒，3宗則因病毒量太低沒有結果。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/y6SU17" title="無標題"><img src="https://live.staticflickr.com/65535/52094535567_a74db62c10_z.jpg" width="640" height="427" alt="無標題" /></a></p>
 <p><strong>增多宗變異病毒株個案  累計64宗BA.2.12.1</strong></p>
