--- a/_posts/2022-05-24-INITIUM-早报-俄军在顿巴斯地区发起全面进攻-乌克兰前线局势困难.html
+++ b/_posts/2022-05-24-INITIUM-早报-俄军在顿巴斯地区发起全面进攻-乌克兰前线局势困难.html
@@ -33,9 +33,10 @@ author:
 <p>哈贝克发表声明称，中国是德国主要贸易伙伴，但双方在尊重人权等方面长期存在问题；德国正在努力多元化，减少对中国的依赖；德国也将仔细审查申请在华投资的德国公司，避免供应链中涉及侵犯人权和强迫劳动。</p>
 <p>德国外交部长安娜莱娜·贝尔伯克（Annalena Baerbock）昨日也表态，呼吁中国澄清相关报导中侵犯人权行为，并强调德国致力于在全世界范围保护人权。</p>
 <p>中国外交部发言人<a href="https://www.fmprc.gov.cn/fyrbt_673021/jzhsl_673025/202205/t20220524_10691994.shtml">汪文斌昨日回应</a>，称BBC的报导是“反华势力抹黑新疆的最新例子”，是在“散布谎言谣言”。</p>
-<h3>美国德州小学遭枪击，14名学生和1名老师死亡</h3>
-<p>美国德州一所小学昨日发生枪击案，<a href="https://www.bbc.com/news/live/world-us-canada-61573831">14名学生和1名老师死亡</a>。枪手为18岁男子，已经死亡，据信是被赶到现场的警察击毙。其作案动机不明。</p>
-<p>警方称，案发时间为当地上午11点32分，地点是圣安东尼奥以西约100公里的乌瓦尔德（Uvalde）的罗布小学。现场亦有多人受伤，警方尚未公布受伤人数。传媒指，另有一名66岁女性和一名10岁女童情况危急。</p>
+<h3>美国德州小学枪击案致21人死亡，包括18名儿童</h3>
+<p>美国德州一所小学昨日发生枪击案，已<a href="https://www.bbc.com/news/live/world-us-canada-61573831">造成21人死亡，包括18名儿童</a>。枪手为18岁男子，已经死亡，据信是被赶到现场的警察击毙。其作案动机不明。</p>
+<p>警方称，案发时间为当地上午11点32分，地点是圣安东尼奥以西约100公里的尤瓦尔迪
+（Uvalde）的罗布小学，现场亦有多人受伤。</p>
 <p>德州州长阿博特（Greg Abbott）称，嫌犯为18岁男子萨尔瓦多·拉莫斯（Salvador Ramos），他弃车进入学校，带着一把手枪，可能还有一把步枪。他形容枪手行为“冷酷，不可理喻”。</p>
 <p>美国媒体<a href="https://abcnews.go.com/US/texas-elementary-school-reports-active-shooter-campus/story?id=84940951">ABC称</a>，枪手作案前还开枪杀害了他的祖母。</p>
 <h3>18个国家发现猴痘感染者</h3>
