--- a/_posts/2022-05-24-INMEDIA-陳日君主禮彌撒-勉信徒黑暗中等待黎明.html
+++ b/_posts/2022-05-24-INMEDIA-陳日君主禮彌撒-勉信徒黑暗中等待黎明.html
@@ -9,17 +9,17 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/20220524CYK.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>香港天主教正義和平委員會今晚舉辦「為中國教會祈禱日彌撒」，由早前被警方國安處拘捕的天主教香港教區榮休主教陳日君樞機主禮。他於講道中指，現今教徒可能要為信仰受苦磨練，強調現時可能在黑暗之中，但要有信心等待黎明來臨，「因著天上的力量，我們能夠看見奇蹟。」</p>
-<p>彌撒於晚上8時在聖十字架堂進行，民主黨前主席劉慧卿及公民黨主席梁家傑均有參與。陳日君樞機在其他神父攙扶下步上祭台，主持聖母進教之佑瞻禮，帶領會眾懺悔及祈禱。</p>
+<p>彌撒於晚上8時在聖十字架堂進行，民主黨前主席劉慧卿、公民黨主席梁家傑及前立法會議員陳家洛均有參與。陳日君樞機在其他神父攙扶下步上祭台，主持聖母進教之佑瞻禮，帶領會眾懺悔及祈禱。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/rC9Pxd" title="IMG_5372"><img src="https://live.staticflickr.com/65535/52096424744_e3a8b561f9_z.jpg" width="640" alt="IMG_5372" /></a></p>
 <p>榮休教宗本篤十六世於2007年欽定每年5月24日「聖母進教之佑瞻禮日」為「普世教會為在中國天主教會祈禱日」。陳日君樞機向眾人講道時，重提教宗本篤十六世的《致中國教會信函》。他指教宗希望各人為中國教會求「重新建設共融」，加深所有中國教友對耶穌的信仰及對教宗的忠誠。他提及近年中國教會的發展表面上看似有進步，但實際上仍未成熟及仍未與教廷及教宗合一，因此仍要繼續懇切祈禱。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/Wxy5qD" title="IMG_5360"><img src="https://live.staticflickr.com/65535/52096669575_97da261b26_z.jpg" width="640" alt="IMG_5360" /></a></p>
 <p>陳日君樞機亦提及信仰中最重要是愛德，緊記耶穌的誡命，為君王祈禱，「甚至為嗰啲必害我哋嘅人祈禱」。他指天主的願望是所有人都能得救及認識真理，因此不應咒罵人「落地獄」，「應該希望人人升天堂」。</p>
 <p>他之後以聖伯多祿及保羅的殉道，指現今教徒亦可能要為信仰受苦磨練，勉勵信眾現時可能在黑暗之中，但要等待黎明來臨。</p>
 <p>已停止運作的「612人道支援基金」5名信託人早前被捕，指他們涉嫌干犯「串謀勾結外國勢力或者境外勢力危害國家安全」罪。各人及前基金秘書施城威亦被指沒有遵循《社團條例》要求為基金註冊遭票控，案件今早於西九龍裁判法院<a href="https://bit.ly/3MI5WtL">提堂</a>，6人均不認罪。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/mp8U6a" title="IMG_5368"><img src="https://live.staticflickr.com/65535/52096205893_4506bf4a6e_z.jpg" width="640" alt="IMG_5368" /></a><br /><em>左起：梁家傑、劉慧卿</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/mp8U6a" title="IMG_5368"><img src="https://live.staticflickr.com/65535/52096205893_4506bf4a6e_z.jpg" width="640" alt="IMG_5368" /></a><br /><em>左起：梁家傑、劉慧卿、陳家洛</em></p>
 <p>彌撒結束後，民主黨前主席劉慧卿表示，期望法庭能予陳日君公平公正的審訊，讓事情告一段落。對於天主教香港教區今年<a href="https://bit.ly/3wFPzZ2">停辦六四彌撒活動</a>，她則感到非常失望，「咁嘅情況都仲話畀大家聽仲有好多自由，仲話喺大家個袋度喎，我個袋係咪有個窿吖？跌咗出嚟啦」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/vufQ8q" title="IMG_5365"><img src="https://live.staticflickr.com/65535/52096413324_0c5b73756f_z.jpg" width="640" alt="IMG_5365" /></a></p>
 <p>香港記者協會主席陳朗昇感嘆，身穿祭袍的陳日君樞機雖看起來很老，但他強調信德及言行合一的行動力令陳朗昇大受感動。他強調今晚的主題是為中國教會祈禱，並指教會為當年六四的死傷者祈禱，只要不涉及口號及政治因素，應不會有太大問題，「希望周守仁主教記得上任時講過嘅說話」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/gVe8fM" title="IMG_5366"><img src="https://live.staticflickr.com/65535/52096414299_3d7946f228_z.jpg" width="640" alt="IMG_5366" /></a></p>
-<p>香港浸會大學新聞系高級講師呂秉權指，中國由2008年起實行中國化管治宗教，使宗教團體在中國的生存空間愈縮愈小，對比起中國信徒面對苦況，香港信眾仍有空間與希望繼續走下去，「就好似樞機啱啱所講要有希望去面對苦難，相信天上嘅主宰，先至唔會過份悲觀同失去信心。」</p>
+<p>香港浸會大學新聞系高級講師呂秉權指，近年內地積極推行宗教中國化，使宗教團體在中國的生存空間愈縮愈小，對比起中國信徒面對苦況，香港信眾仍有空間與希望繼續走下去，「就好似樞機啱啱所講要有希望去面對苦難，相信天上嘅主宰，先至唔會過份悲觀同失去信心。」</p>
 </div></div></div>
