Update VOCUS 2022-05-26 patch

--- a/_posts/2022-05-25-VOCUS-瑪麗蓮夢露-最後的錄音-真相!.html
+++ b/_posts/2022-05-25-VOCUS-瑪麗蓮夢露-最後的錄音-真相!.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/e314dd2d-38f9-4c93-9952-ff56bf83e325.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">不過這部紀錄片雖然公開了很多沒有公布的錄音資料，但可以說在瑪麗蓮夢露人生際遇的探討或是一些較為私密的部分，都比較像是薩默斯和他訪談對象的猜測，最大的一點就是關於瑪麗蓮夢露的政治傾向的猜測，而這點紀錄片也證實了當時的確是有FBI介入調查夢露私生活。</div>
 <div class="draft-block draft--p left">就我自己而言看這部片中瑪麗蓮夢露的一生，其實又是一個當時代女性在男人權力鬥爭下的悲劇，但這死亡悲劇除了男性權力以外，也是瑪麗蓮夢露自己一個時代女性下把自己推向風口浪尖處，想要證明什麼卻被海浪潮汐給吞噬的一個女明星的悲劇。瑪麗蓮夢露小時憧憬的女演員生活，如今成為了一代經典也成為了她的夢醒時分。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/N4u9wcejCTE"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/N4u9wcejCTE"></iframe></div>
