--- a/_posts/2022-05-25-PQ-葉毓蘭一天快篩四次-陳時中-快篩弄得太多其實是浪費.html
+++ b/_posts/2022-05-25-PQ-葉毓蘭一天快篩四次-陳時中-快篩弄得太多其實是浪費.html
@@ -20,7 +20,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。-768x1024.jpg" alt="" class="wp-image-102422" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。.jpg 1108w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>國民黨立委葉毓蘭快篩呈現陽性。<br>圖／葉毓蘭臉書。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。-768x1024.jpg" alt="" class="wp-image-102422" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。-768x1024.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。-225x300.jpg 225w, https://storage.googleapis.com/stateless-34-84-11-249/2022/05/f7c096b8-國民黨立委葉毓蘭快篩呈現陽性。圖／葉毓蘭臉書。.jpg 1108w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>國民黨立委葉毓蘭快篩呈現陽性。<br>圖／葉毓蘭臉書。</figcaption></figure></div>
 
 
 
