--- a/_posts/2022-05-25-INITIUM-方可成-中国-自媒体-十年-流量生意-一地鸡毛.html
+++ b/_posts/2022-05-25-INITIUM-方可成-中国-自媒体-十年-流量生意-一地鸡毛.html
@@ -8,8 +8,8 @@ tags: blog
 author: 
 ---
 
-<p>「自律的缺乏，使得这个行业只存在“还没有遭遇铁拳”和“已经遭遇铁拳”两个状态。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220526-note-opinion-ten-years-zimeiti-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/9b741d2797e04974851f105b527ae0bd.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2015年8月13日，天津市滨海新区一个危险化学品仓库发生爆炸，一名男子拿着手机及录音器材再附近拍摄。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2015年8月13日，天津市滨海新区一个危险化学品仓库发生爆炸，一名男子拿着手机及录音器材再附近拍摄。<span class="credit">摄：Damir Sagolj/Reuters/达志影像</span></figcaption></figure><p><strong>（方可成，香港中文大学新闻与传播学院助理教授）</strong></p>
+<p>「自律的缺乏，使得这个行业只存在“还没有遭遇铁拳”和“已经遭遇铁拳”两个状态。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220526-note-opinion-ten-years-zimeiti-china/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/05/9b741d2797e04974851f105b527ae0bd.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2015年8月13日，天津市滨海新区一个危险化学品仓库发生爆炸，一名男子拿着手机及录音器材在附近拍摄。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2015年8月13日，天津市滨海新区一个危险化学品仓库发生爆炸，一名男子拿着手机及录音器材在附近拍摄。<span class="credit">摄：Damir Sagolj/Reuters/达志影像</span></figcaption></figure><p><small>方可成，香港中文大学新闻与传播学院助理教授</small></p>
 <p>当记录上海封城期间真实声音的短片《四月之声》在中国的社交媒体上不断被删除和被接力发布的时候，在那个中国的网民们表现出难得一见的团结和执着的夜晚，我所在的一个以自媒体从业者为主体的微信群里，大家忧心忡忡地讨论：这次之后，政府会不会一怒之下把微信视频号、朋友圈关掉？群友们默认的共识似乎是：如果真的因为《四月之声》传播得太厉害而导致这些平台被关掉，那将对自媒体的生意造成重大的打击——比起倾听上海人的呐喊，大家更担心的是：喊声如果太大，导致自媒体人的饭碗丢了，那可不好。</p>
 <p>在那个群里潜水的时间越久，我就越体会到，中国的自媒体从业者们，绝大部分只关心流量和钞票，公共关怀是一件很少被他们提起的事情。他们反感自由派“公知”，不喜欢他们“搞事”，甚至相信所谓“境外势力”的阴谋论；他们觉得安安稳稳赚钱才是王道，只有当政府出台的政策导致楼市和股市下跌、广告市场萎靡时，他们才会因为钱包里的损失发发牢骚，但没有人会去追问政策出台的逻辑。</p>
 <p>这个微信群是整个自媒体行业的一个缩影。2012年，微信公众平台的上线揭开了自媒体时代的序幕。十年之后的今天，我们看到的自媒体行业是一只庞大但丑陋的巨兽，它不停歇地生产着中国人在智能手机上阅读和转发的垃圾信息，以大量拼凑和编造的内容挑逗着人们的情绪，千方百计地将人们的注意力转化为金钱。它造就了一批富人，创造了不少就业机会，但也持续不断朝中国人的信息环境排放着污染，降低着公共生活的质量。</p>
