--- a/_posts/2022-05-26-INMEDIA-滑翔傘意外頻生-申訴專員批民航處不執法-倡飛行員實名登記.html
+++ b/_posts/2022-05-26-INMEDIA-滑翔傘意外頻生-申訴專員批民航處不執法-倡飛行員實名登記.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/0207111%20%281%29_151.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>上周有滑翔傘飛行員降落西貢農莊壓爛農作物，並提出五百元賠償，引起安全及規管問題。申訴專員公署今日就民航處規管滑翔傘活動發佈主動調查結果，批評民航處沒有切實執法，例如未能確認涉事飛航員身份、調查意外個案欠積極及鮮有巡查許可證，並提出8項建議，包括立法要求飛行員實名登記。</p>
-<p>申訴專員趙慧賢強調，執法需要有足夠證據，首要是確認涉事人的身份，單憑一張相片並不能認定，實名制必然是執法的基礎。民航處下午回應申訴專員公署，表示歡迎建議，處方會與所屬及相關政策局商討有關建議的可行性。</p>
+<p>申訴專員趙慧賢強調，執法需要有足夠證據，首要是確認涉事人的身份，單憑一張相片並不能認定，實名制必然是執法的基礎。民航處下午回應申訴專員公署，表示歡迎建議，處方會與所屬相關政策局商討有關建議的可行性。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5584m4" title="無標題"><img src="https://live.staticflickr.com/65535/52098882812_5e56b4661e_z.jpg" width="640" alt="無標題" /></a><br /><em>申訴專員趙慧賢</em></p>
 <p><strong>申訴專員：僅3人取得取酬活動許可證</strong></p>
 <p>申訴專員趙慧賢指，近年收費滑翔傘活動愈趨普及，但同時不時發生意外。她指，香港現時並未有專門規管滑翔傘的法例，民航處主要以《民航條例》及附屬法例相關條文規管活動，例如任何人如透過以滑翔傘作出租及取酬服務，必須事先申請許可證，為期六個月。</p>
